--- a/class/04_CSS/04_background/css/style.css
+++ b/class/04_CSS/04_background/css/style.css
@@ -51,3 +51,32 @@
     background-size: cover;
     background-attachment: fixed;
 }
+
+.total_bg {
+    width: 100%;
+    height: 300px;
+    background: #000 url(../img/university_02.jpg) no-repeat scroll 50% 50%/100% auto;
+}
+
+.parent_bg {
+    width: 300px;
+    height: 300px;
+    background-image: url(../img/jan.png);
+    background-position: 50% 50%;
+    background-size: cover;
+}
+.child_bg {
+    width: 300px;
+    height: 300px;
+    background-image: url(../img/snoopy.png);
+    background-position: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: 60px;
+}
+.child_bg h2{
+    color: #ff0;
+    text-align: center;
+    /* height: 300px; */
+    line-height: 300px;
+    background-color: rgba(0,0,0,0.5);
+}
