--- a/class/04_CSS/06_layout/css/style.css
+++ b/class/04_CSS/06_layout/css/style.css
@@ -34,7 +34,7 @@ a{text-decoration: none; color: #333;}
 
 #adidas_header {
     width: 100%;
-    /* height: 40px; */
+    height: 40px;
     background-color: #edefed;
 }
 #adidas_header:after{
@@ -42,6 +42,7 @@ a{text-decoration: none; color: #333;}
 }
 #adidas_header > .logo {
     float: left;
+    font-size: 0;
 }
 #adidas_header > .logo > a > img {
     height: 40px;
