--- a/class/04_CSS/06_layout/css/style.css
+++ b/class/04_CSS/06_layout/css/style.css
@@ -1,11 +1,10 @@
 @charset "utf-8";
 
-*{}
+/* *{font-family:} */
 html, body{margin: 0; padding: 0;}
 h1, h2, h3, h4, h5, h6, p{margin: 0;}
 ul, ol{margin: 0; padding: 0; list-style: none;}
 a{text-decoration: none; color: #333;}
-
 
 
 .float_left {
@@ -158,11 +157,29 @@ a{text-decoration: none; color: #333;}
 #flex1 {
     padding: 20px 0;
     background-color: #4cf;
+    height: 300px;
     display: flex;
+
+    /* 자식의 배치방향 설정 */
     flex-direction: column;
     flex-direction: row; /* 기본값 */
     /* flex-direction: row-reverse;
     flex-direction: column-reverse; */
+
+    /* 자식의 가로 방향 배치 설정 */
+    justify-content: center;
+    /* justify-content: flex-start;
+    justify-content: flex-end; */
+    justify-content: space-between;
+    /* 부모공간의 여백을 기준으로 자식을 배치한다. 좌우측 끝부분까지 활용 */
+    justify-content: space-around;
+    /* 부모가 자식을 배치하는 과정에서 부모의 여백을 자식 배분하여 가져감 */
+
+    /* 자식의 세로 방향 배치 설정 */
+    align-items: center;
+    /* align-items: flex-start;
+    align-items: flex-end; */
+
 }
 #flex1 .item {
     width: 150px;
@@ -171,4 +188,241 @@ a{text-decoration: none; color: #333;}
 }
 #flex1 .item:nth-child(2n) {
     background-color: #faf;
+}
+
+
+.flex-header1 {
+    width: 100%;
+    height: 80px;
+    background-color: #ccc;
+    display: flex;
+    justify-content: center;
+}
+.flex-header1 > .wrap {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin: 0 auto; */
+}
+.flex-header1 > .wrap > .logo {
+    background-color: #aff;
+    
+}
+.flex-header1 > .wrap > .logo > a > img {
+    height: 50px;
+}
+.flex-header1 > .wrap > .menu {
+    background-color: #faf;
+}
+.flex-header1 > .wrap > .menu > ul {
+    display: flex;
+}
+.flex-header1 > .wrap > .menu > ul > li {
+    margin: 0 15px;
+    background-color: #fcc;
+}
+
+.flex-header1 > .wrap > .sign > ul {
+    display: flex;
+}
+.flex-header1 > .wrap > .sign > ul > li {
+    padding: 0 15px;
+    background-color: #999;
+}
+
+
+.flex-content1 {
+    background-color: #ddd;
+}
+.flex-content1 .wrap {
+    display: flex;
+    flex-wrap: wrap;
+    /* 자식의 고유 영역을 확보하기 위해서 사용 */
+}
+.flex-content1 .wrap .item {
+    width: calc(25% - 20px);
+    /* width: moz-calc(25% - 20px);
+    width: webkit-calc(25% - 20px); */
+    height: 200px;
+    background-color: #faa;
+    margin: 0 10px 20px;
+}
+/* 
+짝수번째 : :nth-child(2n), :nth-child(even)
+홀수번째 : :nth-child(2n-1), :nth-child(odd)
+*/
+.flex-content1 .wrap .item:nth-child(even) {
+    background-color: #aaf;
+}
+
+.flex-content2 {
+    width: 100%;
+    background-color: #ddd;
+}
+.flex-content2 .wrap {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    /*
+    row-gap: 20px;
+    column-gap: 20px;
+    */
+    gap: 10px 20px;
+    justify-content: center;
+}
+.flex-content2 .wrap .item {
+    width: calc(25% - 20px);
+    height: 200px;
+    background-color: #faa;
+}
+.flex-content2 .wrap .item:nth-child(even) {
+    background-color: #aaf;
+}
+
+.flex-child1 {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #ccc;
+}
+.flex-child1 > .item {
+    width: auto;
+    height: 100px;
+    background-color: #faa;
+}
+.flex-child1 > .item.item1 {
+    background-color: #aaf;
+    order: 4;
+    flex-grow: 1;
+}
+.flex-child1 > .item.item2 {
+    background-color: #fc5;
+    order: 1;
+    flex-grow: 2;
+}
+.flex-child1 > .item.item3 {
+    background-color: #c5f;
+    order: 2;
+    flex-grow: 1;
+}
+.flex-child1 > .item.item4 {
+    background-color: #8cf;
+    order: 3;
+    flex-grow: 4;
+}
+
+.flex-child2 {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #ccc;
+}
+.flex-child2 > .item {
+    width: 100%;
+    height: 100px;
+    background-color: #faa;
+}
+.flex-child2 > .item.item1 {
+    background-color: #aaf;
+    flex-shrink: 2;
+}
+.flex-child2 > .item.item2 {
+    background-color: #fc5;
+    flex-shrink: 3;
+}
+.flex-child2 > .item.item3 {
+    background-color: #c5f;
+    flex-shrink: 4;
+}
+.flex-child2 > .item.item4 {
+    background-color: #8cf;
+    flex-shrink: 3;
+}
+
+/* position */
+.po_static {
+    width: 300px;
+    height: 300px;
+    background-color: #faa;
+    margin-top: 30px;
+    margin-left: 60px;
+}
+.po_relative {
+    width: 300px;
+    height: 300px;
+    background-color: #ffa;
+    position: relative;
+    top: 30px;
+    left: 60px;
+}
+
+/* 양의 울타리 역할 */
+.po_absolute_space {
+    width: 300px;
+    height: 300px;
+    background-color: #aff;
+    position : relative;
+    top: 20px;
+    left: 40px;
+}
+/* 양1 */
+.absolute1 {
+    width: 100px;
+    height: 100px;
+    background-color: #faf;
+    position: absolute;
+    top: 20px;
+    left: 50px;
+    z-index: 1;
+}
+/* 양2 */
+.absolute2 {
+    width: 100px;
+    height: 100px;
+    background-color: #aaf;
+    position: absolute;
+    /* top: 40px;
+    left: 70px; */
+    bottom: 30px;
+    right: 20px;
+    z-index: 0;
+}
+
+.ad_photo {
+    width: 200px;
+    height: 150px;
+    background-image: url(../img/chair.jpg);
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    left: calc(50% - 100px);
+}
+.ad_photo > img {
+    position: absolute;
+    height: 50px;
+    top: -25px;
+    left: -25px;
+}
+
+.po_fixed {
+    width: 100px;
+    height: 100px;
+    background-color: #f00;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
 }
