--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ header {
 header > p {
     color: #6d6d6d;
 }
-
 main {
     display: flex;
     justify-content: center;
@@ -30,6 +29,19 @@ main > .assignment {
     border: 1px solid #a9a9a9;
     border-radius: 10px;
     padding: 20px;
+}
+@media (max-width: 800px) {
+    main {
+        display: block;
+    }
+    main > .class {
+        width: 300px;
+        margin: 0 auto 20px;
+    }
+    main > .assignment {
+        width: 300px;
+        margin: 0 auto 20px;
+    }
 }
 main > .class > h2 {
     margin-bottom: 20px;
@@ -49,13 +61,15 @@ main .divide {
 }
 main .divide > p {
     font-weight: normal;
-    margin-left: 20px;
-    margin-top: 2px;
+    margin-left: 16px;
+    margin-top: 4px;
     color: #fff;
 }
 main .divide > p > a {
     color: #333;
     border-radius: 3px;
+    display: inline-block;
+    padding: 5px;
 }
 main > .class .divide > p > a {
     background-color: rgb(248, 255, 184);
