5주차 토요일 강의 메인페이지 추가

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header > p {
 main {
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
 }
 main > .class {
     width: 400px;
