--- a/class/06_Javascript/05_javascript_function/css/style.css
+++ b/class/06_Javascript/05_javascript_function/css/style.css
@@ -7,3 +7,28 @@ ul, ol{margin: 0; padding: 0; list-style: none;}
 a{text-decoration: none;}
 button{cursor: pointer;}
 
+.photoCover {
+    display: flex;
+    flex-wrap: wrap;
+}
+.photoCover .photo {
+    width: calc(25% - 30px);
+    margin: 0 15px 30px;
+    background-color: #c9f;
+    border-radius: 4px;
+    padding: 10px;
+}
+.photoCover .photo .photoImg {
+    width: 100%;
+    height: 200px;
+    background-color: #aff;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 2px;
+}
+.photoCover .photo h4 {
+    padding-top: 10px;
+    font-size: 16px;
+    text-align: center;
+    color: #555;
+}
