--- a/assignment/09_WEEK/06_자바스크립트_함수 실습문제/css/style.css
+++ b/assignment/09_WEEK/06_자바스크립트_함수 실습문제/css/style.css
@@ -1,2 +1,29 @@
 @charset "utf-8";
 
+
+
+/* 실습 3 */
+#test_03 img {
+    height: 200px;
+}
+
+/* 실습 4 */
+#test_04 img {
+    width: 120px;
+}
+
+/* 실습 5 */
+#test_05 .box5{
+    width: 220px; height: auto; 
+    float: left; 
+    margin: 0 10px 20px; 
+    padding: 10px; 
+    background-color: #fff; 
+    box-shadow:0 0 2px rgba(0,0,0,0.5); 
+    text-align: center;
+}
+#test_05 .box5 .img_part{
+    width: 100%; height: 300px; 
+    background-size: cover; 
+    background-position: 50% 50%;
+}
