11주차 일요일 강의

--- a/class/06_Javascript/09_javascript_DOM_2/css/style.css
+++ b/class/06_Javascript/09_javascript_DOM_2/css/style.css
@@ -1,2 +1,181 @@
 @charset "utf-8";
+*{box-sizing: border-box;}
+html, body{margin: 0; padding: 0;}
+h1, h2, h3, h4, h5, h6, p{margin: 0;}
+ul, ol{margin: 0; padding: 0; list-style: none;}
+a{text-decoration: none;}
 
+/*이미지 슬라이드*/
+#slider_box{
+    width: 100%;
+    height: 500px;
+    /* padding: 10px 0; */
+    /* margin-left: 450px; */
+    background-color: #aaa;
+    position: relative;
+    overflow: hidden;
+}
+#slider_box .slider{
+    width: 500%;
+    height: 100%;
+    /* padding: 10px 0; */
+    background-color: #aff;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -100%;
+}
+
+#slider_box .slider.next{
+    margin-left: -200%;
+    transition: margin-left 0.5s;
+}
+#slider_box .slider.prev{
+    margin-left: 0%;
+    transition: margin-left 0.5s;
+}
+#slider_box .slider .slide{
+    width: 20%;
+    height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-weight: bold;
+    color: #fff;
+}
+#slider_box .slider .slide.slide1{background-image: url(../img/main_bg_01.jpg);}
+#slider_box .slider .slide.slide2{background-image: url(../img/main_bg_02.jpg);}
+#slider_box .slider .slide.slide3{background-image: url(../img/main_bg_03.jpg);}
+#slider_box .slider .slide.slide4{background-image: url(../img/main_bg_04.jpg);}
+#slider_box .slider .slide.slide5{background-image: url(../img/main_bg_05.jpg);}
+
+#slider_box .slider .slide h3 {
+    font-size: 24px;
+    opacity: 0;
+}
+#slider_box .slider .slide.active h3 {
+    opacity: 1;
+    transition: opacity 0.5s;
+}
+#slider_box .slider .slide p {
+    font-size: 18px;
+    padding: 20px 0 10px;
+    opacity: 0;
+}
+#slider_box .slider .slide.active p {
+    opacity: 1;
+    transition: opacity 0.5s;
+    transition-delay: 0.5s;
+}
+#slider_box .slider .slide button {
+    width: 160px;
+    height: 50px;
+    border: none;
+    border-radius: 6px;
+    background-color: #fa0;
+    color: #fff;
+    font-size: 18px;
+    opacity: 0;
+    transform: translateY(50px);
+}
+#slider_box .slider .slide.active button {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.5s, transform 0.5s;
+    transition-delay: 1s;
+}
+
+#slider_box .arrow {}
+#slider_box .arrow a  {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: left 0.5s, right 0.5s;
+}
+
+/* 최초 상태는 양쪽 화살표가 보이지 않다가 마우스 오버로 슬라이드 영역 내부로 진입 시 화살표가 보이도록 구성 */
+#slider_box .arrow .arrow_prev {
+    left: -40px;
+}
+#slider_box .arrow .arrow_next {
+    right: -40px;
+}
+#slider_box.hover .arrow .arrow_prev {
+    left: 20px;
+}
+#slider_box.hover .arrow .arrow_next {
+    right: 20px;
+}
+#slider_box .arrow a img {
+    display: block;
+    height: 50px;
+}
+
+
+/****To Do List*****/
+#todoList_cover{
+    max-width: 500px;
+    min-width: 320px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ccc;
+    border-radius: 8px;
+    padding: 20px;
+}
+#todoList_cover .input_line{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#todoList_cover .input_line input{
+    width: calc(100% - 140px); height: 40px;
+    border:1px solid #08f;
+    border-radius: 4px;
+    padding: 0 16px; 
+    outline-color: #08f;
+}
+#todoList_cover .input_line button{
+    width: 120px; height: 40px; 
+    border:1px solid #08f;
+    border-radius:4px;
+    color: #08f;
+    cursor: pointer;
+}
+#todoList_cover .input_line button:hover{
+    background-color: #08f; color:#fff;
+}
+
+#todoList_cover #todo_list{padding-top: 20px;}
+#todoList_cover #todo_list .list{
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #aaa;
+    padding: 8px 0; background-color: #eee; 
+    padding-right: 10px;
+}
+#todoList_cover #todo_list .list p{
+    width: calc(100% - 52px);
+    line-height: 32px;
+    padding: 0 16px;
+    color:#555;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+#todoList_cover #todo_list .list span{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    width: 32px; height: 32px;
+    border-radius: 50%;
+    background-color: #555;
+    color:#fff;
+    line-height: 32px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+}
